--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-formidable": "^1.2.0",
+    "@types/express-session": "^1.17.10",
     "@types/gridfs-stream": "^0.5.39",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/method-override": "^0.0.32",
